buggfix WCAG, Jshint, Jigsaw fixes

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -12,7 +12,7 @@
     <div class="container my-5">
         <div class="text-center">
             <h1>Welcome to Sanda Bazaar</h1>
-            <p class="lead font-size-text">A cultural oasis on Gotland</p>
+            <h2 class="lead font-size-text">A cultural oasis on Gotland</h2>
         </div>
     
         <!-- First Section -->
