--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,23 +11,23 @@
             <!-- Grouped Heading and Subheading -->
             <div class="mb-4 intro-text-section-text">
                 <h1 class="display-4 font-weight-bold">Discover the Wonders of Sanda Bazaar</h1>
-                <p class="h3">A Treasure Trove on Gotland</p>
+                <h2 class="h3">A Treasure Trove on Gotland</h2>
             </div>
             <!-- Grouped Text Descriptions -->
             <div class="row intro-text-section-text my-2">
                 <div class="col-md-4 my-2">
                     <i class="fas fa-globe-americas h1 my-1"></i>
-                    <p class="font-weight-bold text-large h4">Global Selection</p>
+                    <h3 class="font-weight-bold text-large h4">Global Selection</h3>
                     <p class="h5">Curated items from across the globe, each with its own story and charm.</p>
                 </div>
                 <div class="col-md-4 my-2">
                     <i class="fas fa-store h1 my-1"></i>
-                    <p class="font-weight-bold h4">Summer Store</p>
+                    <h3 class="font-weight-bold h4">Summer Store</h3>
                     <p class="h5">Visit our physical store in Gotland for antiques and unique finds.</p>
                 </div>
                 <div class="col-md-4 my-2">
                     <i class="fas fa-ice-cream h1 my-1"></i>
-                    <p class="font-weight-bold h4">Enjoy a Treat</p>
+                    <h3 class="font-weight-bold h4">Enjoy a Treat</h3>
                     <p class="h5">Relax with a cup of coffee, a biscuit, or a delightful gelato.</p>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                                 {% endif %}
                             </a>
                                 <div class="card-body pb-0">
-                                    <p class="mb-0 text-decoration-none font-size-text"><a href="{% url 'product_detail' product.id %}" class="text-black">{{ product.name }}</a></p>
+                                    <h3 class="mb-0 text-decoration-none font-size-text"><a href="{% url 'product_detail' product.id %}" class="text-black">{{ product.name }}</a></h3>
                                 </div>
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
