--- a/bazaar/templates/bazaar/bazaar.html
+++ b/bazaar/templates/bazaar/bazaar.html
@@ -69,9 +69,9 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
+                        <p class="text-black mt-3 text-center text-md-left">
                             {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                <span class="small"><a href="{% url 'bazaar' %}">Products Home</a> | </span>
+                                <span class="font-size-text-md font-weight-bold"><a href="{% url 'bazaar' %}">Products Home</a> | </span>
                             {% endif %}
                             {{ products|length }} Products
                             {% if search_term %}
@@ -126,8 +126,8 @@
                                         {% endif %}
                                         {% if request.user.is_superuser %}
                                             <small class="ml-3">
-                                                <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                                                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                                <a href="{% url 'edit_product' product.id %}" class="text-primary font-size-text-md font-weight-bold">Edit</a> | 
+                                                <a class="text-danger font-size-text-md font-weight-bold" href="{% url 'delete_product' product.id %}">Delete</a>
                                             </small>
                                         {% endif %}
                                     </div>
