--- a/bazaar/templates/bazaar/product_detail.html
+++ b/bazaar/templates/bazaar/product_detail.html
@@ -37,20 +37,20 @@
                 <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                 {% if product.category %}
                 <p class="small mt-1 mb-0">
-                    <a class="text-muted" href="{% url 'bazaar' %}?category={{ product.category.name }}">
+                    <a class="text-black" href="{% url 'bazaar' %}?category={{ product.category.name }}">
                         <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                     </a>
                 </p>
                 {% endif %}
                 {% if product.rating %}
-                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    <small class="text-black"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                 {% else %}
-                    <small class="text-muted">No Rating</small>
+                    <small class="text-black">No Rating</small>
                 {% endif %}
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a href="{% url 'edit_product' product.id %}" class="text-primary font-size-text-md font-weight-bold">Edit</a> | 
+                        <a class="text-danger font-size-text-md font-weight-bold" href="{% url 'delete_product' product.id %}">Delete</a>
                     </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
@@ -63,7 +63,7 @@
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <button class="decrement-qty btn btn-black rounded-0" 
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}" aria-label="decrement product quantity button">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
@@ -72,10 +72,10 @@
                                     <input class="form-control qty_input" type="number"
                                         name="quantity" value="1" min="1" max="99"
                                         data-item_id="{{ product.id }}"
-                                        id="id_qty_{{ product.id }}">
+                                        id="id_qty_{{ product.id }}" aria-label="product quantity field">
                                     <div class="input-group-append">
                                         <button class="increment-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}" aria-label="increment product quantity button">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
                                             </span>
