--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -10,23 +10,23 @@
     <div class="row py-4">
         <div class="col-lg-10 mx-auto">
             <h1 class="display-4 font-weight-bold">Contact Sanda Bazaar</h1>
-            <p class="h3 text-muted mb-4">Connect with us!</p>
+            <h2 class="h3 text-muted mb-4">Connect with us!</h2>
 
             <!-- Icons and Text Centered -->
             <div class="row">
                 <div class="col-md-4 mb-3 text-center">
                     <i class="fas fa-map-marker-alt fa-2x text-primary mb-2"></i>
-                    <h4>Visit Us</h4>
+                    <h3>Visit Us</h3>
                     <p>Sanda Nystugu 573, 623 79, Gotland, Sweden</p>
                 </div>
                 <div class="col-md-4 mb-3 text-center">
                     <i class="fas fa-envelope fa-2x text-primary mb-2"></i>
-                    <h4>Email Us</h4>
+                    <h3>Email Us</h3>
                     <p>sandabazaar@gmail.com</p>
                 </div>
                 <div class="col-md-4 mb-3 text-center">
                     <i class="fas fa-phone-alt fa-2x text-primary mb-2"></i>
-                    <h4>Call Us</h4>
+                    <h3>Call Us</h3>
                     <p>+46 123 456 789</p>
                 </div>
             </div>
