--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,9 @@
         <div class="col-lg-4 py-2 py-lg-4 d-flex justify-content-center">
           <form method="GET" action="{% url 'bazaar' %}">
             <div class="input-group">
-              <input class="form-control border border-black rounded custom-search-input" type="text" name="q" placeholder="Search our site">
+              <input class="form-control border border-black rounded custom-search-input" aria-label="Search our site" type="text" name="q" placeholder="Search our site">
               <div class="input-group-append">
-                <button class="btn border border-black rounded-pill mx-2" type="submit">
+                <button class="btn border border-black rounded-pill mx-2" aria-label="Search button" type="submit">
                   <span class="icon">
                     <i class="fas fa-search"></i>
                   </span>
@@ -74,7 +74,7 @@
               </div>
             </li>
             <li class="list-inline-item">
-              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+              <a class="{% if grand_total %}bg-warning text-black rounded font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                 <i class="fas fa-shopping-bag fa-lg"></i>
                 {% if grand_total %}
                   ${{ grand_total|floatformat:2 }}
