--- a/bazaar/templates/bazaar/bazaar.html
+++ b/bazaar/templates/bazaar/bazaar.html
@@ -71,7 +71,7 @@
                     <div class="col-12 col-md-6 order-md-first">
                         <p class="text-black mt-3 text-center text-md-left">
                             {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                <span class="font-size-text-md font-weight-bold"><a href="{% url 'bazaar' %}">Products Home</a> | </span>
+                                <span class="link-dark-blue font-size-text-md font-weight-bold"><a href="{% url 'bazaar' %}">Products Home</a> | </span>
                             {% endif %}
                             {{ products|length }} Products
                             {% if search_term %}
@@ -159,11 +159,6 @@
             </div>
         </div>
     </div>
-</div>
-<div class="btt-button shadow-sm rounded-0 border border-black">
-    <a class="btt-link d-flex h-100">
-        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-    </a>
 </div>
 {% endblock %}
 {% block postloadjs %}
