buggfix product edit page checkbox fix, more wcag fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -135,12 +135,13 @@
           </div>
           <!-- Address (Middle Side) -->
           <div class="col-md-4 mb-3">
-            <h5>Visit Us</h5>
+            <p>Visit Us</p>
             <address>
               Sanda Nystugu 573, <br>
               Gotland, Sweden 623 79
             </address>
-          </div>
+            <a href="https://www.termsfeed.com/live/2b4d2bb0-e53d-4689-a1de-ec9c8bff6593" class="text-black small font-weight-bold" title="Read our Privacy Policy" target="_blank" rel="noopener">Privacy Policy</a>
+            </div>
           <!-- Newsletter Signup (Right Side) -->
           <div id="mc_embed_shell" class="col-md-4 mb-3">
             <div id="mc_embed_signup">
