--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -98,7 +98,7 @@
                 <p>Delivery: ${{ delivery|floatformat:2 }}</p>
                 <p class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></p>
                 {% if free_delivery_delta > 0 %}
-                    <p class="mb-1 text-danger">
+                    <p class="mb-1 text-danger font-size-text-md font-weight-bold">
                         You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
                     </p>
                 {% endif %}
