--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -25,7 +25,7 @@
                             {% elif item.product.image %}
                                 <img class="w-100" src="{{ MEDIA_URL }}{{ item.product.image }}" alt="{{ item.product.name }}">
                             {% else %}
-                                <img class="w-100" src="{{ STATIC_URL }}noimage.png" alt="{{ item.product.name }}">
+                                <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
                             {% endif %}
                         </div>
                         <div class="col-9">
