--- a/bazaar/templates/bazaar/product_detail.html
+++ b/bazaar/templates/bazaar/product_detail.html
@@ -50,7 +50,7 @@
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
                         <a href="{% url 'edit_product' product.id %}" class="text-primary font-size-text-md font-weight-bold">Edit</a> | 
-                        <a class="text-danger font-size-text-md font-weight-bold" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a class="text-danger font-size-text-md font-weight-bold" href="{% url 'delete_product' product.id %}" onclick="return confirmDelete();">Delete</a>
                     </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
@@ -163,6 +163,7 @@
 {% endblock content %}
 {% block postloadjs %}
     {{ block.super }}
+    <script src="{% static 'js/confirm_del.js' %}"></script>
     {% include 'bazaar/includes/qty_in_script.html' %}
     {% include 'bazaar/includes/star_rating.html' %}
 {% endblock postloadjs %}
