buggfix rating sorting desc add disclaimer image size

--- a/bazaar/templates/bazaar/edit_product.html
+++ b/bazaar/templates/bazaar/edit_product.html
@@ -37,6 +37,9 @@
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'bazaar' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
+                        <p class="form-text text-black">
+                            Please upload images in WEBP format only, with dimensions exactly 380x380 pixels.
+                        </p>
                     </div>
                 </form>
             </div>            
