buggfix styles for WAVE compability

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -22,12 +22,14 @@
                 <div class="col-md-4 mb-3 text-center">
                     <i class="fas fa-envelope fa-2x text-primary mb-2"></i>
                     <h3>Email Us</h3>
-                    <p>sandabazaar@gmail.com</p>
+                    <a href="mailto:sandabazaar@gmail.com" target="_blank" rel="noopener"
+                    aria-label="Mailto link that opens your mail program" class="font-size-text-md link-dark-blue font-weight-bold">sandabazaar@gmail.com</a>
                 </div>
                 <div class="col-md-4 mb-3 text-center">
                     <i class="fas fa-phone-alt fa-2x text-primary mb-2"></i>
                     <h3>Call Us</h3>
-                    <p>+46 123 456 789</p>
+                    <a href="tel:+46123456789" target="_blank" rel="noopener"
+                    aria-label="Telephone link" class="font-size-text-md link-dark-blue font-weight-bold">+46 123 456 789</a>
                 </div>
             </div>
 
