--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -82,7 +82,7 @@
             </div>
             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#faqAccordion">
                 <div class="card-body font-size-text-md bg-sandlight">
-                    If you are on Gotland, you can visit us at [address]. Otherwise, you can reach us by flight or ferry via <a href="https://www.destinationgotland.se">Destination Gotland</a>.
+                    If you are on Gotland, you can visit us at Sanda Nystugu 573, 623 79 Klintehamn, Gotland. Otherwise, you can reach us by flight or by ferry via <a href="https://www.destinationgotland.se" target="_blank" rel="noopener noreferrer nofollow" aria-label="destination gotland ferry link">Destination Gotland</a>.
                 </div>
             </div>
         </div>
