--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
       <meta name="description" content="Discover Sanda Bazaar, a unique cultural and shopping destination in Gotland. Explore our curated selection of local crafts, artisan products, and exclusive second-hand items. Visit our serene summer shop for an authentic Gotland experience.">
       <meta name="keywords" content="gotland, gotlands, gotland products, gotland bazaar, cultural items gotland, gotland artisan market, gotland handmade goods, summer shop gotland, cafe in gotland, best coffee gotland, relaxing cafe gotland, peaceful coffee spot gotland, second-hand market gotland, unique finds gotland, exclusive second-hand gotland, gotland tourist shop, must-visit in gotland, destination gotland shopping, online shopping gotland, gotland e-commerce, gotland gifts online, buy gotland products online, gotland community market, local bazaar gotland, gotland local artisans, support local gotland, sanda bazaar">
-    {% endblock meta %}
+      <meta name="language" content="English">
+      {% endblock meta %}
     {% block extra_meta %}{% endblock %}
     {% block corecss %}
     {% comment %} Bootstrap {% endcomment %}
@@ -130,39 +131,39 @@
         <div class="row">
           <!-- Social Media Links (Left Side) -->
           <div class="col-md-4 mb-3">
-            <h5>Follow Us</h5>
-            <a href="#" class="text-white me-2">
+            <h3>Follow Us</h3>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener nofollow" class="text-white me-2 px-2">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#" class="text-white me-2">
+            <a href="https://twitter.com/" target="_blank" rel="noopener nofollow" class="text-white me-2 px-2">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="text-white me-2">
+            <a href="https://www.instagram.com/" class="text-white me-2 px-2" target="_blank" rel="noopener nofollow">
               <i class="fab fa-instagram"></i>
             </a>
           </div>
           <!-- Address (Middle Side) -->
           <div class="col-md-4 mb-3">
-            <p>Visit Us</p>
+            <h3>Visit Us</h3>
             <address>
               Sanda Nystugu 573, <br>
               Gotland, Sweden 623 79
             </address>
-            <a href="https://www.termsfeed.com/live/2b4d2bb0-e53d-4689-a1de-ec9c8bff6593" class="text-black small font-weight-bold" title="Read our Privacy Policy" target="_blank" rel="noopener">Privacy Policy</a>
+            <a href="https://www.termsfeed.com/live/2b4d2bb0-e53d-4689-a1de-ec9c8bff6593" class="text-black small font-weight-bold" title="Read our Privacy Policy" target="_blank" rel="noopener nofollow">Privacy Policy</a>
             </div>
           <!-- Newsletter Signup (Right Side) -->
           <div id="mc_embed_shell" class="col-md-4 mb-3">
             <div id="mc_embed_signup">
               <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=a8f664296a6dff5b7d15b5ad9&amp;id=18f7c2d980&amp;f_id=0030f3e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                <h2>Subscribe</h2>
+                <h3>Subscribe</h3>
                 <div class="indicates-required">
-                  <span class="asterisk font-size-text font-weight-bold">*</span>
+                  <span class="asterisk text-black font-size-text font-weight-bold">*</span>
                   <span class="font-size-text-md font-weight-bold">indicates required</span>
                 </div>
                 <div class="mc-field-group">
                   <label for="mce-EMAIL">
                     <span class="font-size-text-md font-weight-bold">Email Address </span>
-                    <span class="asterisk font-size-text font-weight-bold">*</span>
+                    <span class="asterisk text-black font-size-text font-weight-bold">*</span>
                   </label>
                   <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required>
                 </div>
