--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4 text-center">Shopping Bag</h2>
+                <h1 class="logo-font mb-4 text-center">Shopping Bag</h1>
                 <hr>
             </div>
         </div>      
@@ -29,7 +29,7 @@
                     <div class="col-12 col-md-9">
                         <div class="row">
                             <div class="col-12 mt-2 text-center text-md-left">
-                                <p><strong>{{ item.product.name }}</strong></p>
+                                <h2><strong>{{ item.product.name }}</strong></h2>
                                 <p class="small text-black">SKU: {{ item.product.sku|upper }}</p>
                             </div>
                         </div>
