--- a/bazaar/templates/bazaar/product_detail.html
+++ b/bazaar/templates/bazaar/product_detail.html
@@ -139,7 +139,7 @@
 </div>
 <!-- Review Form -->
 {% if user.is_authenticated and user_can_review %}
-        <h3>Write a Review:</h3>
+        <h3 class=text-center>Write a Review:</h3>
         <div class="row justify-content-center">
             <div class="col-12 col-md-7 col-lg-5 mb-5 mt-5"> <!-- Reduced width -->
                 <form method="POST" action="{% url 'product_detail' product.id %}" class="form">
