--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -9,6 +9,7 @@
                 <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big sanda bazaar logo in home" class="shadow-break mx-auto d-block img-fluid">
             </div>
         </div>
+        <h1 class="text-center">Blog</h1>
         {% for post in posts %}
         <div class="row justify-content-center">
             <div class="col-2xl-4 col-xl-8 col-lg-8 col-md-12 col-sm-12 mb-4">
