--- a/templates/base.html
+++ b/templates/base.html
@@ -132,13 +132,13 @@
           <!-- Social Media Links (Left Side) -->
           <div class="col-md-4 mb-3">
             <h3>Follow Us</h3>
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener nofollow" class="text-white me-2 px-2">
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener nofollow" class="text-white me-2 px-2" aria-label="Facebook social link">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener nofollow" class="text-white me-2 px-2">
+            <a href="https://twitter.com/" target="_blank" rel="noopener nofollow" class="text-white me-2 px-2" aria-label="Twitter/X social link">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.instagram.com/" class="text-white me-2 px-2" target="_blank" rel="noopener nofollow">
+            <a href="https://www.instagram.com/" class="text-white me-2 px-2" target="_blank" rel="noopener nofollow" aria-label="Instagram social link">
               <i class="fab fa-instagram"></i>
             </a>
           </div>
