--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
       <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
       <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
       <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+      <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
       <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
     {% endblock corecss %}
     {% block extra_css %}{% endblock extra_css %}
