buggfix height adjustment error pages

--- a/templates/403.html
+++ b/templates/403.html
@@ -8,7 +8,7 @@
     </div>
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-7 col-md-6 my-auto min-height-100vh">
                 <h1 class="display-4 logo-font text-black">Access Denied</h1>
                 <p>Sorry, you don't have permission to access this page. If you think this is a mistake, please contact our support team.</p>
                 <div class="my-5">
