--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
     </div>
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-7 col-md-6 my-auto min-height-100vh">
                 <h1 class="display-4 logo-font text-black">Oops! Page Not Found</h1>
                 <div class="my-5">
                     <p>It looks like nothing was found at this location. Maybe try the link below?</p>
