--- a/templates/500.html
+++ b/templates/500.html
@@ -8,7 +8,7 @@
     </div>
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-7 col-md-6 my-auto min-height-100vh">
                 <h1 class="display-4 logo-font text-black">
                     Internal Server Error
                 </h1>
